Add lock test